[project]
name = "open-llm-wiki"
version = "0.1.0"
description = "Claude Code skill bundle and runtime for auditable, self-growing LLM wikis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=6.4.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
  "skills-ref",
]

[tool.uv]
package = false
